# YetAnotherAA-Validator

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HYBRID_ARCHITECTURE.md  INTEGRATION_TEST.md  LICENSE-zh.md  NOTICE  README.md  RELEASING.md  TRADEMARK-zh.md  TRADEMARK.md  docker-compose.mainnet.yml  docker-compose.testnet.yml  eslint.config.js  jest.config.js  notify-contacts.example.json  package-lock.json  package.json
.claude/commands/: check-deps.md
.github/workflows/: ci.yml
conformance/: README.md  reference.mjs  vectors.json
contracts/src/: AAStarValidator.sol
deploy/: .env.mainnet.example  .env.testnet.example  DEPLOYMENT_OPTIONS.md  README.md  cf-tunnel-setup.mjs  dvt-testnet.sh  sdk-dvt-config.testnet.json  verify-prod-e2e.mjs  x402-provision.sh  x402-register-operators.sh
docs/: ANODE_INCENTIVE.md  DVT_VALUE.md  HOW_TO_INTEGRATION.md  PRODUCTION_DEPLOYMENT.md  ROADMAP.md  TESTNET_RELEASE_PLAN.md  aNode-dvt-operations.md  out-of-band-confirmation.md  x402-facilitator.md
docs/design/: dvt-e2e-and-production.md  dvt-node-protocol.md  dvt-policy-governance.md
scripts/: bump-version.sh  check-deps.mjs
scripts/e2e/: README.md  dvt-nodes.sh  gen-nodes.mjs  handleops-tx.mjs  realnode-e2e.mjs  selftest.mjs
scripts/git-hooks/: check-secrets.mjs  pre-commit
scripts/x402/: gen-conformance-fixtures.mjs
signer/: .gitignore  Cargo.toml  README.md
signer/src/: bls.rs  error.rs  keystore.rs  lib.rs  main.rs
src/: app.module.ts  main.ts
src/common/: throttle.guard.spec.ts  throttle.guard.ts
src/config/: configuration.ts
(+50 files in other folders)
